tdf#87539 map MSO washout filter to LO's watermark colormode

Change-Id: Id28e301a74a729245b20ba6cd2adecf203633f0e